1994-05-30  Thomas E. Dickey  <dickey@clark.net>

	* src/ded2s.c: more casts, from Solaris

	* test/Makefile: renamed traceback.sh to walkback.sh

	* src/ded2s.c:
	use casts on stat-struct members to ensure that we are portable

	* src/dedsigs.c: eliminated redundant include of <signal.h>

	* src/ded.c: use new autoconf definitions of DEFAULT_EDITOR, etc.
	also, eliminated redundant includes of <signal.h> and <errno.h>

	* src/ded.h: for inclusion of <signal.h>

	* src/ded.h:
	defined Z_RCS and Z_SCCS in terms of RCS_PATH, SCCS_PATH autoconf-defines

	* user/Makefile, certify/Makefile: use RM symbol

1994-05-29  Thomas E. Dickey  <dickey@clark.net>

	* src/ded.h: split out <td_regex.h>

1994-05-28  Thomas E. Dickey  <dickey@clark.net>

	* src/ded.h: use HAVE_REGEX_H_FUNCS

	* src/ded.h: use HAVE_NEW_TOKEN_QUOTE

1994-05-27  Thomas E. Dickey  <dickey@clark.net>

	* src/dlog.c: use HAVE_STDARG_H

	* src/ded.h: first cut of autoconf adaptation for <regex.h>

1994-05-24  Thomas E. Dickey  <dickey@clark.net>

	* src/ftree.c:
	Philip Hood had a directory name consisting of a backspace. Ded broke.

1994-05-23  Thomas E. Dickey  <dickey@clark.net>

	* src/ded.h: use new include for fcntl.h

	* src/ded.c: use SYS5_CURSES

	* src/dedname.c: use HAVE_RENAME

	* src/ded2s.c:
	use autoconf's tests for 'major()' and 'minor()' includes

1994-05-22  Thomas E. Dickey  <dickey@clark.net>

	* src/ftree.c, src/dedtype.c, src/dedscan.c: rename-DIRENT

1994-05-09  Thomas E. Dickey  <dickey@clark.net>

	* src/dedtype.c:
	coded around bug in Linux's 'ftell()', which resets the eof-flag

1994-04-27  Thomas E. Dickey  <dickey@clark.net>

	* src/ded.c:
	provided sys5-like defaults for EDITOR, other environment variables
	(really do need a configure-script)

1994-04-26  Thomas E. Dickey  <dickey@clark.net>

	* src/ded.h:
	Linux has the same regex-code as hpux (maybe HP wasn't wrong...)

1994-04-01  Thomas E. Dickey  <dickey@clark.net>

	* COPYING: notice for alt.sources
